build.gradle taken from main